--- a/Export/diagnosis/diagnosisAnimal/diagnosisAnimal/Registration.resx
+++ b/Export/diagnosis/diagnosisAnimal/diagnosisAnimal/Registration.resx
@@ -117,4 +117,58 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAANZSURBVDhPVZNZTFRnFMfvS/tgg6JItQzjrIjDIopCQNsaI02NhiJaiohCUGBmGGXKMgqm7pqY
+        SAwYY9ukfeDNGDfatOmkadEa1LCpgLtByibIrPeeuXdEnX+/+6EPPckv53xn+Z97v5srqEauajeDqMZB
+        tJf5ut3vYGcOi2uZr99Nkgo7M9x8WKx3uJXWE5DPfgepuBghlx3h1uNQfjwM5YdDHPn7g5B/OoLQSRek
+        0u0INTdC+fkIArV2tyoQkVv2I1C4Dcr5y5Bq9kG0lUI+dwCh042MBi5Oh/YgUFyKUNNZBL8pgnzKpQpE
+        hECNnfzbt0E6dQaqRQJBBGxO+MuLIZ/ZD1VcdFnhzS/Aq/YbvEc5f4Ut3ApfVQUJPqeVpKNOTBWVQGn/
+        hze8DYrwVFbDb9uBYG05pgpLEL7eMVNjCzzf7kXQUQbfnkoSvI4KUloaIDZaMb6pAPLNTt74ZmIS4/lb
+        Mf51EaYHh3jubUjGpN0JT2khlKZ6eGy7SJiyl5Nysg5yUwPfNrQxH0rffT4QfvKM8z4eLqnAy5JCyOwy
+        5WNOTFaWkTDpsJJytBpiVQGknesxsToZfTojpK4ePqgasbhPq8domhnSjhyIlVsgH6jCC1s5CSNfrSep
+        YDX8G1eANmfheZIOXVoDqPv/Aj16A0bSjaDcDPhy0iDmZuLfDV+Q8DTJTFJeJqRN2XikjUV3xueQnw7y
+        QbHnDqTeOzyW+gdwy2DCSIoe9OVKiDnL8TjBQMKTlESazsvCwKKP0ZG+Cq+8Xj4Q6L2L6zo9rmkXQR4e
+        5rmJtl/RPjcWY6kmKGvT8WBxAgmPkxbTQ7MWNz5bh/DLKd44cukK3BotBln+YfwC/L0ymwn7eG30wkX8
+        pdHhRUoCHpjMJPQZjfTn7Gj0n27hDUMXLuGXOdEY0seDMpeBMtLQGxWFPzKyEPZ4eM9NaxWuRc1Bv469
+        wn2jKeJPTkTbvBi0s8LVOA2G9TrQ0lR4k5bAZ7GAUlPQGTUbv326Br3NzWiLngcfu497Gl1EFXC/Tl0K
+        v8mM3z/8CGPsc01bkkHmJTOYEkHGRLxJsLAnicHVD2bBH2fAa4NFFZj5I7sWat0M6l4YT10LtHQ7VsOI
+        o9vzGSy+NX+Gzth46oj5hHsGGxaE/wCwv676jrx3EgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnDangKy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAJGSURBVDhPhZJdSJNxFMZPmFINm+mFRba5qSzFRiFRoNAXipWKIx1WQyEwdhMYRRdJlBdCBRFh
+        sDHSEi+0QhxES4eVH4EgQxZlF7WaWgYbQTfGoA+e3ufvu2RI+MCBw3l+v3fvxmRV6qRa3OI1txlj9g7T
+        Eoc7b6r7b5olQ5ok2Ny/H8PzV/END/ELI2q488aOjGJT4pZ0aZV437tz+IFn+Jx4BP9cG1xjVjVPFi7i
+        S+Kx6siQVc6/uCQ4EGnHdwTwdPES+qIO3Jg9i2ROvizEwIJTdWTI0lmWW6TK7a9DHEPonWvG/XknPJ8q
+        Ux5weqwAPXP1qiNDlg5dWXchzTeyeBP+eCs80Xrcizpx68Mh9erJcO+KHFUdGbJ06ErJdXNs8mc7roQr
+        cG3qvPa6Ju0TLagNbtJ1wDGapR7CjgxZOnRl953tidCfTpyZKNHxtUOWjl1zpeJBcWLydwcsQ6LXa4fs
+        K80p7y5OSKknL3b5axl2BQQ5g6mTDHfbc0GBNtzJ0rF782Ky9fYGn+N1Llre5uNYyIAj0+tRNi6wjq48
+        gHL5hOD4dBZqQpsVS4eubOk0VB0I5uLUewscIRNOhPNxeCoTRS9WHsCdN3ZkyNKhq/4KO+4agrUzJjS8
+        0X79kBmVIeOqr8AbO8VoLB0lM6YuQ/rO3sx4XdiExlkrGjWodDgN2f2ihjtv7MiQpaPry7H6NmbYejKD
+        B8e3oWbGjKZIIVwfbWq488aODFldW52ibkP1nkGjd68/O7YvkLPE4c4bOx3TI/IXWNAkOo4iGIEAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="btnQuayLai.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAKuSURBVDhPhZJrSFNhHMZP37Q+SB+KQETCJDTzVillpV3EtaII+pATLIzyBubdJNEZaixBRZtY
+        bX1RM9O0MES8VNJFNJ21rZRdnDtubpMcuk13YfZ03uOISMwf/OHwf57fywvnpTaw9x6HOtwg3sXrcu1J
+        bLeSId9kx2abEl7nTQXV9IeUDCOpj0a+dBllGgdKlSvI+7bE7khGOmz3b7bFPPKiYkR6XrcGAq0DZdPL
+        SH5vQELrDFLeGZH2yYgS+RIeMBmvSwPSZZ0/RDf1pfbSaKDtSBk24mDLLJLblEhpUSGkTYvYbh3O9ehw
+        bciIRr0d6UyXOB5ZxOHWjaN+zomrAwZEt9OIa/oOQsYLNQLEKhx/rkVU6yxCmzWI69BAqHOAWzfBHPKE
+        Q+241Cnmjy0gc8yM+FdzON3wFU6Hkz3gYo9h06mQmLGdcanAjEFTldYNbieNWMEXWG0OVv4fp9o0KFc5
+        EJg5aKIiSkfsOaNmJNaOMtGv9cYWnHmmgtDgwoHij3YqrkZqvzk0j/OVnz3x1vjwJyE2A0fvS+xUWPmE
+        KU+xhv0iGmcrR5h461v43J1EttKNUL7ERPkWj4uvDC/ilsyO4KdahGcPYcliZ4thqQNs+d+JrJfjOtMn
+        LrU7a5TD7dLjtsyGrB+rONYxj51Jr5mLuNgD9lVP4chjJQ41KRHZqECUUIl0iQUXmD9BXPYp+JXL+tIm
+        LMiXr6BI6QT37SIrk8mlgTsqJwqZfYHCCb7OjUypFb6Mw8oEf77MK1io1ufIrOArV1FBu3Bj0gLqci8K
+        plaQK7WgUG4DX7WKHEYOeqjWE8ejr+MvmPYOqJ/p530wo4iRan+6UW1cg4B2oIp54sWKVZCMdEjXo23E
+        r1bNjWjWiU50GE0JbxZs8T0LtpMvDSayI5mn5oGifgNlTYhqO4OvwgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
